--- a/Modern Cpp.vcxproj
+++ b/Modern Cpp.vcxproj
@@ -137,7 +137,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="1. Basics\1. keywords.cpp" />
     <ClCompile Include="1. Basics\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="1. Basics\basicsheader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
