--- a/Modern Cpp.vcxproj.filters
+++ b/Modern Cpp.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="1. Basics\01. Keywords.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="1. Basics\02. Variables.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="1. Basics\basicsheader.h">
