--- a/Modern Cpp.vcxproj
+++ b/Modern Cpp.vcxproj
@@ -142,7 +142,7 @@
     <ClCompile Include="1. Basics\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="1. Basics\basicsheader.h" />
+    <ClInclude Include="1. Basics\basics_header.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
