--- a/Modern Cpp.vcxproj.filters
+++ b/Modern Cpp.vcxproj.filters
@@ -26,7 +26,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="1. Basics\basicsheader.h">
+    <ClInclude Include="1. Basics\basics_header.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
