--- a/Modern Cpp.vcxproj
+++ b/Modern Cpp.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="1. Basics\02. Variables.cpp" />
     <ClCompile Include="1. Basics\03. Data_types.cpp" />
     <ClCompile Include="1. Basics\04. Functions.cpp" />
+    <ClCompile Include="1. Basics\05. Condtions.cpp" />
     <ClCompile Include="1. Basics\main.cpp" />
   </ItemGroup>
   <ItemGroup>
