--- a/Modern Cpp.vcxproj.filters
+++ b/Modern Cpp.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="1. Basics\05. Condtions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="1. Basics\06. Control_flow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="1. Basics\basics_header.h">
