--- a/Modern Cpp.vcxproj.filters
+++ b/Modern Cpp.vcxproj.filters
@@ -36,9 +36,18 @@
     <ClCompile Include="1. Basics\06. Control_flow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="2. Memory\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="2. Memory\01. Pointers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="1. Basics\basics_header.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="2. Memory\memory_header.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
