--- a/Modern Cpp.vcxproj
+++ b/Modern Cpp.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="1. Basics\06. Control_flow.cpp" />
     <ClCompile Include="1. Basics\main.cpp" />
     <ClCompile Include="2. Memory\01. Pointers.cpp" />
+    <ClCompile Include="2. Memory\02. References.cpp" />
     <ClCompile Include="2. Memory\main.cpp" />
   </ItemGroup>
   <ItemGroup>
