--- a/Modern Cpp.vcxproj
+++ b/Modern Cpp.vcxproj
@@ -146,6 +146,8 @@
     <ClCompile Include="1. Basics\main.cpp" />
     <ClCompile Include="2. Memory\01. Pointers.cpp" />
     <ClCompile Include="2. Memory\02. References.cpp" />
+    <ClCompile Include="2. Memory\03. Arrays.cpp" />
+    <ClCompile Include="2. Memory\04. Dynamic_memory.cpp" />
     <ClCompile Include="2. Memory\main.cpp" />
   </ItemGroup>
   <ItemGroup>
