--- a/Modern Cpp.vcxproj
+++ b/Modern Cpp.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="1. Basics\04. Functions.cpp" />
     <ClCompile Include="1. Basics\05. Condtions.cpp" />
     <ClCompile Include="1. Basics\06. Control_flow.cpp" />
+    <ClCompile Include="1. Basics\07. size_t_sizeof.cpp" />
     <ClCompile Include="1. Basics\main.cpp" />
     <ClCompile Include="2. Memory\01. Pointers.cpp" />
     <ClCompile Include="2. Memory\02. References.cpp" />
