renaming dynamic_memory.cpp and adding stl_array.cpp

--- a/Modern Cpp.vcxproj
+++ b/Modern Cpp.vcxproj
@@ -148,7 +148,8 @@
     <ClCompile Include="2. Memory\01. Pointers.cpp" />
     <ClCompile Include="2. Memory\02. References.cpp" />
     <ClCompile Include="2. Memory\03. Arrays.cpp" />
-    <ClCompile Include="2. Memory\04. Dynamic_memory.cpp" />
+    <ClCompile Include="2. Memory\05. Dynamic_memory.cpp" />
+    <ClCompile Include="2. Memory\04. Stl_array.cpp" />
     <ClCompile Include="2. Memory\main.cpp" />
   </ItemGroup>
   <ItemGroup>
