--- a/Modern Cpp.vcxproj.filters
+++ b/Modern Cpp.vcxproj.filters
@@ -45,13 +45,16 @@
     <ClCompile Include="2. Memory\02. References.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="2. Memory\04. Dynamic_memory.cpp">
+    <ClCompile Include="2. Memory\05. Dynamic_memory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="2. Memory\03. Arrays.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="1. Basics\07. size_t_sizeof.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="2. Memory\04. Stl_array.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
