--- a/Modern Cpp.vcxproj
+++ b/Modern Cpp.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="2. Memory\05. Dynamic_memory.cpp" />
     <ClCompile Include="2. Memory\04. Stl_array.cpp" />
     <ClCompile Include="2. Memory\06. Vectors.cpp" />
+    <ClCompile Include="2. Memory\07. Vector_matrix.cpp" />
     <ClCompile Include="2. Memory\main.cpp" />
   </ItemGroup>
   <ItemGroup>
