Created a folder Structures

--- a/Modern Cpp.vcxproj
+++ b/Modern Cpp.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="2. Memory\06. Vectors.cpp" />
     <ClCompile Include="2. Memory\07. Vector_matrix.cpp" />
     <ClCompile Include="2. Memory\main.cpp" />
+    <ClCompile Include="3. Structures\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="1. Basics\basics_header.h" />
