Added anonymousStruct() function

--- a/Modern Cpp.vcxproj
+++ b/Modern Cpp.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="2. Memory\main.cpp" />
     <ClCompile Include="3. Structures\02. Intermediate_structs.cpp" />
     <ClCompile Include="3. Structures\01. Basic_structs.cpp" />
+    <ClCompile Include="3. Structures\03. Advanced_structs.cpp" />
     <ClCompile Include="3. Structures\main.cpp" />
   </ItemGroup>
   <ItemGroup>
