--- a/Modern Cpp.vcxproj.filters
+++ b/Modern Cpp.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="3. Structures\03. Advanced_structs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="4. Classes\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="1. Basics\basics_header.h">
