--- a/Modern Cpp.vcxproj.filters
+++ b/Modern Cpp.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="4. Classes\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="4. Classes\class.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="1. Basics\basics_header.h">
